로그인 회원가입 기능 진행중

--- a/PlantProject/app/src/main/AndroidManifest.xml
+++ b/PlantProject/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.plantproject">
-
+    <uses-permission android:name="android.permission.INTERNET"/> <!--인터넷 권한 설정-->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,16 +13,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PlantProject"
         tools:targetApi="31">
-
-
         <activity
-            android:name=".MainActivity"
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>/>
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            >
         </activity>
     </application>
 
