--- a/PlantProject/app/build.gradle
+++ b/PlantProject/app/build.gradle
@@ -35,8 +35,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:21.0.4'
     implementation 'com.google.firebase:firebase-database:20.0.5'
+    implementation 'com.google.android.material:material:1.1.0' // material 라이브러리
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0' // 슬라이드 레이아웃 라이브러리
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0' //qr코드 스캔 라이브러리
 }
